# autoloop

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  release-please-config.json
.github/workflows/: release.yml
docs/examples/: acceptance-matrix.md  real-workflow.md
examples/smoke-python-search/: README.md  bench.py  search.py  test_search.py
examples/smoke-rust-cli/: Cargo.toml  README.md
examples/smoke-rust-cli/src/: lib.rs  main.rs
integrations/_shared/: baseline.md  doctor.md  finalize.md  init.md  learn.md  run.md  status.md
pkg/homebrew/: autoloop.rb
pkg/npm/: README.md  package.json
pkg/npm/scripts/: install.js
scripts/: acceptance-fixture.sh
src/: cli.rs  config.rs  detect.rs  error.rs  experiments.rs  finalize.rs  git.rs  integrations.rs  lib.rs  main.rs  output.rs  shell.rs  state.rs  tags.rs  ui.rs  validation.rs
src/commands/: baseline.rs  discard.rs  doctor.rs  eval.rs  finalize.rs  init.rs  install.rs  keep.rs  learn.rs  mod.rs  pre.rs  session.rs  status.rs
src/eval/: confidence.rs  formats.rs  guardrails.rs  mod.rs
tests/: baseline_eval_cli.rs  doctor_cli.rs  finalize_cli.rs  help_cli.rs  init_cli.rs  install_cli.rs  keep_discard_cli.rs  learn_cli.rs  pre_cli.rs  session_status_cli.rs
